<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_task">Task</string>
    <string name="menu_manifest">Manifest</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_logout">Logout</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forgot password.?</string>
    <string name="notRegistered">Not Registered?</string>
    <string name="signup">  Sign up</string>
    <string name="login">Log In</string>
    <string name="fullname">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password_retype">Retype password</string>
    <string name="sign_up">Sing Up</string>
    <string name="have_an_account">You have a account ?</string>
    <string name="sps">SPS.</string>
    <string name="career">Build your Dream  Career With Us.</string>
    <string name="getCareer">Get a good career through SPS. </string>
    <string name="longtext">i.e Open material Education,Self learning and peer to pear learning. </string>
    <string name="firstTex">Learn the fundamentals of programing (0–30)</string>
    <string name="secondTex">During  this period  you will dive deep into various aspects of your domain (31–90 days)</string>
    <string name="thirdTex">You  will be launch  as many live project  as possible (91–180 days)</string>


    <string name="welcom">Welcome to </string>
    <string name="getStart">Lets get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="theIgnition">1.The Ignition</string>
    <string name="acceleration">2.Acceleration</string>
    <string name="race">3.The race</string>
    <string name="spsBuiltIn"> is built on 3 principles.</string>
    <string name="sps_">SPS,</string>
    <string name="theJourney">The journey at sps </string>
    <string name="next">Next</string>
    <string name="letsGetStart">Lets get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_work">Personal Workouts</string>
    <string name="technical_work">Technical Workouts</string>
    <string name="miscellaneous">Miscellaneous Workouts</string>

    <string name="home_page">home</string>
    <string name="name">profile name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="week">Week 1</string>
    <string name="img">img</string>
    <string name="Task">Tasks</string>
    <string name="notification_demo">sample notification</string>
    <string name="time">2 hour ago</string>
    <string name="home">Home</string>
    <string name="card_tittle">Technical  Worckout</string>
    <string name="reviewer_name">Reviewer name</string>
    <string name="reviewer">Reviewer :</string>
    <string name="counselor">Counselor</string>
    <string name="counselor_name">counselor name</string>
    <string name="date">Date :</string>
    <string name="review_date">review date</string>
    <string name="review_status">Review status</string>
    <string name="score">Score</string>
    <string name="paning_topics">Pending</string>
    <string name="pending_topic">pending topics</string>
    <string name="domain">Domain</string>
    <string name="d_ob">DOB</string>
    <string name="dat_of_birth">Date of birth</string>
    <string name="Gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="fathers_name">Father\'s Name</string>
    <string name="fathers_contact">Father\'s contact</string>
    <string name="mothers_name">Mother\'s name</string>
    <string name="guardian">Guardian</string>
    <string name="Relationship" />
    <string name="relationship">Relationship</string>
    <string name="address">Communication Address</string>
    <string name="village">Village :</string>
    <string name="taluk">Taluk</string>
    <string name="qulificatiion">Qualifications</string>
    <string name="college">College</string>
    <string name="experience">WorkExperience</string>
    <string name="gov_id">Gov.id</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="choose_domain">Choos your domain</string>
    <string name="upload_id">Upload  Gov. id</string>
    <string name="schedules">Schedules</string>
    <string name="reviews">Reviews</string>
    <string name="add">add_btton</string>
    <string name="batch">Batch</string>
    <string name="schedule">schedule</string>
    <string name="loginAs">Sign as counselor</string>
    <string name="all_students">All Students</string>
    <string name="add_student">Add student</string>
    <string name="student_name">Student name</string>
    <string name="cancel">Cancel</string>
    <string name="ko">Ok</string>
    <string-array name="domains">
        <item>Choose your domain</item>
        <item>Web Development with Node(MERN)</item>
        <item>Web Development with Node(MEEN)</item>
        <item>Mobile App Development with Flutter</item>
        <item>Mobile App Development with Kotlin </item>
        <item>Mobile App Development with Swift</item>
    </string-array>
    <string-array name="batches">
        <item>BCK12</item>
        <item>BCK13</item>
        <item>BCK14</item>
        <item>BCK15</item>
        <item>BCK16</item>
        <item>BCK17</item>
    </string-array>
    <string-array name="qualifications">
        <item>Msc</item>
        <item>Bsc</item>
        <item>Eng</item>
        <item>Other</item>
    </string-array>
</resources>